--- a/index.html
+++ b/index.html
@@ -78,13 +78,28 @@
         
         <div class="icons">
             <!-- جارو -->
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="#FFD700"><path d="M20 2h-2v2h-2v2h-2v2h-2v2h-2v2h-2v2h-2v2h-2v2h-2v2h14v-2h-2v-2h2v-2h-2v-2h2v-2h-2v-2h2v-2h-2V8h2V6h-2V4h2V2zm-8 16H6l-2 4H2l3-6h7v2z"/></svg>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48">
+                <path fill="#FFD700" d="M18 6h12v28H18z"/>
+                <path fill="#8B4513" d="M20 4h8v2h-8z"/>
+                <path fill="#FFD700" d="M14 34h20l4 8H10z"/>
+            </svg>
             <!-- جاروبرقی -->
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="#FF4500"><path d="M19 7h-8l-1 7H7c-1.1 0-2 .9-2 2v4c0 1.1.9 2 2 2h2.5l1-7h6l1 7H19c1.1 0 2-.9 2-2v-4c0-1.1-.9-2-2-2zM9 16H7v-2h2v2zm8 0h-2v-2h2v2zM11 5V3H9v2h2zm2 0h2V3h-2v2z"/></svg>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48">
+                <path fill="#FF4500" d="M18 8h12v20H18z"/>
+                <path fill="#000" d="M22 28h4v8h-4z"/>
+                <path fill="#FF4500" d="M16 36h16v4H16z"/>
+            </svg>
             <!-- خاک‌انداز -->
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="#4682B4"><path d="M20 9H9l-2 6H5v6h14v-6h-2l-2-6zm-9 8H7v-2h4v2z"/></svg>
-            <!-- دستمال -->
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="#87CEEB"><path d="M19 5H5v14h14V5zm-2 2H7v10h10V7z"/></svg>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48">
+                <path fill="#4682B4" d="M10 28h28v12H10z"/>
+                <path fill="#4682B4" d="M18 20h12v8H18z"/>
+            </svg>
+            <!-- تمیزکاری (دستمال) -->
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48">
+                <path fill="#87CEEB" d="M14 14h20v20H14z"/>
+                <path fill="#FFF" d="M18 18h12v12H18z"/>
+                <path fill="#FFD700" d="M24 24l4-4"/>
+            </svg>
         </div>
         
         <div class="timer" id="timer"></div>
