--- a/index.html
+++ b/index.html
@@ -7,15 +7,16 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
+            background: url('https://www.toptal.com/designers/subtlepatterns/uploads/memphis-mini.png') repeat;
             color: #333;
             text-align: center;
             padding: 20px;
+            margin: 0;
         }
         .container {
             max-width: 800px;
             margin: 0 auto;
-            background: #fff;
+            background: rgba(255, 255, 255, 0.9);
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -66,7 +67,7 @@
             justify-content: center;
             gap: 20px;
         }
-        .icons svg {
+        .icons img {
             width: 80px;
             height: 80px;
         }
@@ -77,29 +78,9 @@
         <h1>ثبت‌نام خانه‌تکونی ننه</h1>
         
         <div class="icons">
-            <!-- جارو -->
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48">
-                <path fill="#FFD700" d="M18 6h12v28H18z"/>
-                <path fill="#8B4513" d="M20 4h8v2h-8z"/>
-                <path fill="#FFD700" d="M14 34h20l4 8H10z"/>
-            </svg>
-            <!-- جاروبرقی -->
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48">
-                <path fill="#FF4500" d="M18 8h12v20H18z"/>
-                <path fill="#000" d="M22 28h4v8h-4z"/>
-                <path fill="#FF4500" d="M16 36h16v4H16z"/>
-            </svg>
-            <!-- خاک‌انداز -->
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48">
-                <path fill="#4682B4" d="M10 28h28v12H10z"/>
-                <path fill="#4682B4" d="M18 20h12v8H18z"/>
-            </svg>
-            <!-- تمیزکاری (دستمال) -->
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48">
-                <path fill="#87CEEB" d="M14 14h20v20H14z"/>
-                <path fill="#FFF" d="M18 18h12v12H18z"/>
-                <path fill="#FFD700" d="M24 24l4-4"/>
-            </svg>
+            <img src="https://img.icons8.com/color/100/000000/broom.png" alt="جارو">
+            <img src="https://img.icons8.com/color/100/000000/vacuum-cleaner.png" alt="جاروبرقی">
+            <img src="https://img.icons8.com/color/100/000000/dustpan.png" alt="خاک‌انداز"
         </div>
         
         <div class="timer" id="timer"></div>
