--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div class="icons">
             <img src="https://img.icons8.com/color/100/000000/broom.png" alt="جارو">
             <img src="https://img.icons8.com/color/100/000000/vacuum-cleaner.png" alt="جاروبرقی">
-            <img src="https://img.icons8.com/color/100/000000/dustpan.png" alt="خاک‌انداز"
+            <img src="https://img.icons8.com/color/100/000000/dustpan.png" alt="خاک‌انداز">
         </div>
         
         <div class="timer" id="timer"></div>
